.tanzu/config/httproute-tanzu-music.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  annotations:
    apps.tanzu.vmware.com/promotable: ""
    apps.tanzu.vmware.com/promote-group: ContainerApp/tanzu-music
  name: tanzu-music-http-route
spec:
  parentRefs:
  - group: networking.tanzu.vmware.com
    kind: Entrypoint
    name: tanzu-music
  rules:
  - backendRefs:
    - kind: Service
      name: tanzu-music
      port: 8080
